--- a/src/global.css
+++ b/src/global.css
@@ -11,8 +11,15 @@ w3m-core-button {
   transform: scale(0.8) translateX(10%);
 }
 
+body {
+  width: 100%;
+  height: 100%;
+}
+
 #root {
   width: 100%;
+  max-width: 800px;
+  margin: 0 auto;
   height: 100vh;
   background: #1b293e;
   color: #fff;
