--- a/src/global.css
+++ b/src/global.css
@@ -11,9 +11,17 @@ w3m-core-button {
   transform: scale(0.8) translateX(10%);
 }
 
+img {
+  display: inline-block;
+}
+
 body {
   width: 100%;
   height: 100%;
+}
+
+.flex-center {
+  
 }
 
 #root {
