--- a/src/global.css
+++ b/src/global.css
@@ -13,7 +13,8 @@ img, svg{
 body {
   width: 100%;
   height: 100%;
-  background: #1e232c !important;
+  /* background: #1e232c !important; */
+  background: #1b293e !important;
 }
 
 #root {
